option('confsuffix', type : 'string', value: 'qemu')
option('docdir', type : 'string', value : 'doc/qemu')
option('gettext', type : 'boolean', value : true)
option('sdl', type : 'feature', value : 'auto')
option('sdl_image', type : 'feature', value : 'auto')
option('vnc', type : 'feature', value : 'enabled')
option('vnc_jpeg', type : 'feature', value : 'auto')
option('vnc_png', type : 'feature', value : 'auto')
option('vnc_sasl', type : 'feature', value : 'auto')
option('xkbcommon', type : 'feature', value : 'auto')
