[package]
name = "qga"
version = "0.1.0"
edition = "2018"
license = "GPLv2"

[dependencies]
common = { path = "../rust/common" }
libc = "^0.2.76"
hostname = "^0.3.1"

[target."cfg(unix)".dependencies]
nix = "^0.18.0"

[target."cfg(windows)".dependencies]
winapi = { version = "^0.3.9", features = ["sysinfoapi", "winnt"] }

[lib]
path = "lib.rs"
crate-type = ["staticlib"]
