[package]
name = "qga"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
common = { path = "../rust/common" }
hostname = "0.3.1"

[target."cfg(unix)".dependencies]
nix = "0.20.0"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "winnt"] }

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "qapi-cabi-rs"
path = "qapi-cabi.rs"
doc = false
